--- a/board/templates/article_create.html
+++ b/board/templates/article_create.html
@@ -1,12 +1,24 @@
 {% extends 'base.html' %} {% block content %}
 
-<form action="/article_create" method="post">
-  <input type="text" name="user_id" hidden value="{{ content.user_id }}" />
-  <label for="title">title: </label>
-  <input id="title" name="title" type="text" />
-  <label for="content">content: </label>
-  <input id="content" name="content" autocomplete="off" type="textarea" />
-  <input type="submit" value="글쓰기" />
+<script src="{{ url_for('static', filename='js/textarea.js') }}"></script>
+
+<form id="not_allow_submit" action="/article_create" method="post">
+  <input type="text" name="user_id" hidden value="{{ context.user.id }}" />
+  <div>
+    <label for="title">title: </label>
+    <input required id="title" name="title" type="text" />
+  </div>
+
+  <textarea
+    required
+    id="content"
+    name="content"
+    type="textarea"
+    cols="30"
+    rows="20"
+  ></textarea>
+
+  <input type="submit" value="글쓰기" /></div>
 </form>
 
 {% endblock %}
