--- a/board/templates/base.html
+++ b/board/templates/base.html
@@ -23,7 +23,7 @@
           <input type="submit" value="로그인" />
         </form>
         {% else %}
-        <a href="#">{{ context.user.name }}</a><a href="logout">로그아웃</a>
+        <a href="#">{{ context.user.name }}</a><a href="/logout">로그아웃</a>
         <span>{{ context.name }}</span>
         {% endif %}
       </span>
@@ -35,20 +35,29 @@
           <span class="nav-item">items</span>
           <span class="nav-item">items</span>
         </div>
-        {% endblock %} {% block content %} {% for article in context.articles %}
+        {% endblock %} {% block content %}
+        <table>
+          <thead>
+            <tr>
+              <td>날짜</td>
+              <td>제목</td>
+              <td>작성자</td>
+            </tr>
+          </thead>
+          <tbody>
+            {% for article in context.articles %}
+            <tr>
+              <td>{{ article.created_at }}</td>
+              <td>
+                <a href="article/{{ article.id }}">{{ article.title }}</a>
+              </td>
+              <td>{{ article.name }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
 
-        <div>
-          <ul>
-            <a href="#">
-              <li>
-                {{ article.created_at }} | {{ article.title }} | {{ article.name
-                }}
-              </li>
-            </a>
-          </ul>
-        </div>
-
-        {% endfor %} {% if context.user != None %}
+        {% if context.user != None %}
         <div>
           <a href="/article_create"> 글쓰기 </a>
         </div>
