오류 제거 및 게시글 수정 구현

--- a/board/static/css/style.css
+++ b/board/static/css/style.css
@@ -36,6 +36,10 @@ a:hover {
   text-decoration: underline;
 }
 
+.article-content {
+  padding: 8px 12px;
+}
+
 .article-table-body {
   padding-left: 12px;
 }
